--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -17,10 +17,22 @@
                                 <power-geosearch [(resetGeosearch)]="resetGeosearch"
                                                  [isCollapsed]="isCollapsed"
                                                  (selectResult)="flyTo($event)"></power-geosearch>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="selectingFlurstueck()">
+                                    <img src="/assets/icons/flag.svg"
+                                         width="25"
+                                         height="25"
+                                         alt="Flurstück aus- bzw abwählen"
+                                         title="Flurstück aus- bzw abwählen"
+                                         i18n-alt
+                                         i18n-title>
+                                </button>
                             </div>
                             <div class="nav">
-                                <a class="nav-link"
-                                   (click)="resetSelection()">
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="resetSelection()">
                                     <img src="/assets/icons/trash.svg"
                                          width="25"
                                          height="25"
@@ -28,19 +40,21 @@
                                          title="Selektion aufheben"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="toggleLocationTracking()">
+                                </button>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="toggleLocationTracking()">
                                     <img src="/assets/icons/geo.svg"
                                          width="25"
                                          height="25"
-                                         alt="Standort aktivieren/deaktivieren"
-                                         title="Standort aktivieren/deaktivieren"
+                                         alt="Eigenen Standort anzeigen"
+                                         title="Eigenen Standort anzeigen"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="toggle3dView()">
+                                </button>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="toggle3dView()">
                                     <img src="/assets/icons/building.svg"
                                          width="25"
                                          height="25"
@@ -48,9 +62,10 @@
                                          title="3D aktivieren/deaktivieren"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="resetMap()">
+                                </button>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="resetMap()">
                                     <img src="/assets/icons/globe.svg"
                                          width="25"
                                          height="25"
@@ -58,7 +73,7 @@
                                          title="Karte zurücksetzen"
                                          i18n-alt
                                          i18n-title>
-                                </a>
+                                </button>
                             </div>
                         </nav>
                     </div>
@@ -69,8 +84,9 @@
                     <div class="nav-scroller bg-white shadow-sm border-top">
                         <nav class="nav nav-underline">
                             <div class="nav ml-auto">
-                                <a class="nav-link"
-                                   (click)="toggleSearchActive()">
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="toggleSearchActive()">
                                     <img src="/assets/icons/search.svg"
                                          width="25"
                                          height="25"
@@ -78,9 +94,9 @@
                                          title="Suche"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="resetSelection()">
+                                </button>
+                                <button class="nav-link btn"
+                                        (click)="resetSelection()">
                                     <img src="/assets/icons/trash.svg"
                                          width="25"
                                          height="25"
@@ -88,9 +104,10 @@
                                          title="Selektion löschen"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="enableLocationTracking()">
+                                </button>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="enableLocationTracking()">
                                     <img src="/assets/icons/geo.svg"
                                          width="25"
                                          height="25"
@@ -98,9 +115,10 @@
                                          title="Ortung"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="toggle3dView()">
+                                </button>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="toggle3dView()">
                                     <img src="/assets/icons/building.svg"
                                          width="25"
                                          height="25"
@@ -108,9 +126,10 @@
                                          title="3D aktivieren/deaktivieren"
                                          i18n-alt
                                          i18n-title>
-                                </a>
-                                <a class="nav-link"
-                                   (click)="resetMap()">
+                                </button>
+                                <button class="nav-link btn"
+                                        type="button"
+                                        (click)="resetMap()">
                                     <img src="/assets/icons/globe.svg"
                                          width="25"
                                          height="25"
@@ -118,7 +137,7 @@
                                          title="Karte zurücksetzen"
                                          i18n-alt
                                          i18n-title>
-                                </a>
+                                </button>
                             </div>
                         </nav>
                     </div>
@@ -216,6 +235,8 @@
                      [isAnimated]="true">
                     <div class="well well-lg card card-block card-header">
                         <table class="table table-bordered">
+                            <caption class="sr-only"
+                                     i18n>Flurstücksdaten</caption>
                             <tbody>
                                 <tr>
                                     <th scope="col"
