--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -17,7 +17,7 @@
                                 <power-geosearch [(resetGeosearch)]="resetGeosearch"
                                                  [isCollapsed]="isCollapsed"
                                                  (selectResult)="flyTo($event)"></power-geosearch>
-                                <button class="nav-link btn"
+                                <!-- <button class="nav-link btn"
                                         type="button"
                                         (click)="selectingFlurstueck()">
                                     <img src="/assets/icons/flag.svg"
@@ -27,7 +27,7 @@
                                          title="Flurstück aus- bzw abwählen"
                                          i18n-alt
                                          i18n-title>
-                                </button>
+                                </button> -->
                             </div>
                             <div class="nav">
                                 <button class="nav-link btn"
