--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -1,4 +1,4 @@
-<power-modal #formattinghelpmodal checkInvalid="true">
+<power-modal #formattinghelpmodal>
     <p>
         <label i18n>
             Für die Formatierung und Gliederung von Texten verwenden wir Markdown.
