improved accessibility and icons

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -52,6 +52,7 @@
                                 <button class="nav-link btn"
                                         type="button"
                                         (click)="toggleLocationTracking()"
+                                        [ngClass]="{'active': searchActive}"
                                         alt="Eigenen Standort anzeigen"
                                         title="Eigenen Standort anzeigen"
                                         i18n-title
@@ -115,17 +116,30 @@
                             <div class="nav ml-auto">
                                 <button class="nav-link btn"
                                         type="button"
-                                        (click)="toggleSearchActive()">
-                                    <img src="/assets/icons/search.svg"
-                                         width="25"
-                                         height="25"
-                                         alt="Suche"
-                                         title="Suche"
-                                         i18n-alt
-                                         i18n-title>
+                                        title="Suche"
+                                        alt="Suche"
+                                        i18n-alt
+                                        i18n-title
+                                        (click)="toggleSearchActive()"
+                                        [ngClass]="{'active': searchActive}">
+                                    <svg width="20px"
+                                         height="20px"
+                                         viewBox="0 0 16 16"
+                                         class="bi bi-search"
+                                         fill="currentColor"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd"
+                                              d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z" />
+                                        <path fill-rule="evenodd"
+                                              d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                                    </svg>
                                 </button>
                                 <button class="nav-link btn"
-                                        (click)="resetSelection()">
+                                        (click)="resetSelection()"
+                                        title="Selektion zurücksetzen"
+                                        alt="Selektion zurücksetzen"
+                                        i18n-alt
+                                        i18n-title>
                                     <svg width="20px"
                                          height="20px"
                                          viewBox="0 0 16 16"
@@ -140,7 +154,12 @@
                                 </button>
                                 <button class="nav-link btn"
                                         type="button"
-                                        (click)="enableLocationTracking()">
+                                        (click)="enableLocationTracking()"
+                                        [ngClass]="{'active': locationTrackingActive}"
+                                        alt="Eigenen Standort anzeigen"
+                                        title="Eigenen Standort anzeigen"
+                                        i18n-title
+                                        i18n-alt>
                                     <svg width="20px"
                                          height="20px"
                                          viewBox="0 0 16 16"
@@ -153,7 +172,12 @@
                                 </button>
                                 <button class="nav-link btn"
                                         type="button"
-                                        (click)="toggle3dView()">
+                                        (click)="toggle3dView()"
+                                        [ngClass]="{'active': threeDActive}"
+                                        alt="3D aktivieren/deaktivieren"
+                                        title="3D aktivieren/deaktivieren"
+                                        i18n-title
+                                        i18n-alt>
                                     <svg width="20px"
                                          height="20px"
                                          viewBox="0 0 16 16"
@@ -168,7 +192,11 @@
                                 </button>
                                 <button class="nav-link btn"
                                         type="button"
-                                        (click)="resetMap()">
+                                        title="Karte zurücksetzen"
+                                        alt="Karte zurücksetzen"
+                                        (click)="resetMap()"
+                                        i18n-title
+                                        i18n-alt>
                                     <svg width="20px"
                                          height="20px"
                                          viewBox="0 0 16 16"
